feat: Migrate avg_time_to_discount

--- a/analytics/price_reduction/price_reduction.sql.j2
+++ b/analytics/price_reduction/price_reduction.sql.j2
@@ -13,13 +13,7 @@ FROM
 WHERE
     1 = 1
     AND MajorChangeType = 'Price Change'
-    AND MlsStatus in (
-        'Active',
-        'Coming Soon / Hold', 
-        'Under Contract - Showing',
-        'Under Contract - Not Showing',
-        'Closed'
-    )
+    {{ filters.mls_status_active() }}
     {{ filters.market_date(start, end) }}
     {{ filters.geo(country, city) }}
 GROUP BY
