refactor: Refactor filters

--- a/analytics/filters.macro.sql.j2
+++ b/analytics/filters.macro.sql.j2
@@ -1,31 +1,31 @@
 {%- macro geo(country, city) -%}
     {%- if country -%}
-    AND Country IN ({{ country|map("quote")|join(",") }})
+    Country IN ({{ country|map("quote")|join(",") }})
+    {%- else -%}
+    1 = 1
     {%- endif -%}
     {%- if city -%}
-    AND City IN ({{ city|map("quote")|join(",") }})
+    City IN ({{ city|map("quote")|join(",") }})
+    {%- else -%}
+    1 = 1
     {%- endif -%}
 {%- endmacro -%}
 
 {%- macro mls_status_closed -%}
-    AND MlsStatus = 'Closed'
+    MlsStatus = 'Closed'
 {%- endmacro -%}
 
 {%- macro mls_status_active -%}
-    AND MlsStatus in (
-        'Active',
-        'Coming Soon / Hold', 
-        'Under Contract - Showing',
-        'Under Contract - Not Showing',
-        'Closed'
-    )
+    MlsStatus in ('Active', 'Coming Soon / Hold', 'Under Contract - Showing', 'Under Contract - Not Showing', 'Closed')
 {%- endmacro -%}
 
 {%- macro close_date(start, end) -%}
-    AND CloseDate BETWEEN {{ start|quote }} AND {{ end|quote }}
+    (CloseDate BETWEEN {{ start|quote }} AND {{ end|quote }})
 {%- endmacro -%}
 
 {%- macro market_date(start, end) -%}
-    AND OnMarketDate <= {{ end|quote }}
-    AND (OffMarketDate >= {{ start|quote }} OR ContingentDate >= {{ start|quote }})
+    (
+        OnMarketDate <= {{ end|quote }}
+        AND (OffMarketDate >= {{ start|quote }} OR ContingentDate >= {{ start|quote }})
+    )
 {%- endmacro -%}
