--- a/analytics/location_analysis/sales_price_vs_list_price_ratio.sql.j2
+++ b/analytics/location_analysis/sales_price_vs_list_price_ratio.sql.j2
@@ -15,10 +15,9 @@ SELECT
 FROM
     MLSGrid.Property
 WHERE
-    1 = 1
     {{ filters.mls_status_closed() }}
-    {{ filters.close_date(start, end) }}
-    {{ filters.geo(country, city) }}
+    AND {{ filters.close_date(start, end) }}
+    AND {{ filters.geo(country, city) }}
 GROUP BY
     {{ groupbys.date('CloseDate', level) }}
 
