--- a/analytics/supply_demand_analysis/days_on_market.sql.j2
+++ b/analytics/supply_demand_analysis/days_on_market.sql.j2
@@ -8,9 +8,8 @@ SELECT
 FROM
     MLSGrid.Property
 WHERE
-    1 = 1
     {{ filters.close_date(start, end) }}
-    {{ filters.geo(country, city) }}
+    AND {{ filters.geo(country, city) }}
 GROUP BY
     {{ groupbys.date('CloseDate', level) }}
 
