--- a/analytics/location_analysis/inventory.sql.j2
+++ b/analytics/location_analysis/inventory.sql.j2
@@ -8,10 +8,9 @@ SELECT
 FROM
     MLSGrid.Property
 WHERE
-    1 = 1
     {{ filters.mls_status_active() }}
-    {{ filters.market_date(start, end) }}
-    {{ filters.geo(country, city) }}
+    AND {{ filters.market_date(start, end) }}
+    AND {{ filters.geo(country, city) }}
 GROUP BY
     {{ groupbys.breakdown(by) }}
 
