--- a/analytics/price_reduction/price_reduction.sql.j2
+++ b/analytics/price_reduction/price_reduction.sql.j2
@@ -11,11 +11,10 @@ SELECT
 FROM
     MLSGrid.Property
 WHERE
-    1 = 1
-    AND MajorChangeType = 'Price Change'
-    {{ filters.mls_status_active() }}
-    {{ filters.market_date(start, end) }}
-    {{ filters.geo(country, city) }}
+    MajorChangeType = 'Price Change'
+    AND {{ filters.mls_status_active() }}
+    AND {{ filters.market_date(start, end) }}
+    AND {{ filters.geo(country, city) }}
 GROUP BY
     {{ groupbys.date('DATE(MajorChangeTimeStamp)', level) }}
     {{ groupbys.breakdown(by) }}
