feat: Add test_analytics_service & fix groupbys macro

--- a/analytics/template/macro/groupbys.sql.j2
+++ b/analytics/template/macro/groupbys.sql.j2
@@ -4,7 +4,7 @@
     {%- elif level == 'week' -%}
     DATE_TRUNC({{ column }}, WEEK)
     {%- else -%}
-    {{ column }} AS date
+    {{ column }}
     {%- endif -%}
 {%- endmacro -%}
 
