--- a/analytics/template/price-reduction/price-reduction.sql.j2
+++ b/analytics/template/price-reduction/price-reduction.sql.j2
@@ -6,7 +6,7 @@ SELECT
     {{ dimensions.date('DATE(MajorChangeTimeStamp)', level) }}
     {{ dimensions.breakdown(by) }}
     COUNT(ListingId) AS count_units,
-    AVG(DATEDIFF(DATE(MajorChangeTimeStamp), OnMarketDate, day) + 1) AS avg_time_to_discount_in_days,
+    AVG(DATE_DIFF(DATE(MajorChangeTimeStamp), OnMarketDate, day) + 1) AS avg_time_to_discount_in_days,
     AVG(ListPrice - PreviousListPrice) AS price_reduction,
 FROM
     MLSGrid.Property
