fix: Fix inventory-by-type

--- a/analytics/template/location/inventory-by-type.sql.j2
+++ b/analytics/template/location/inventory-by-type.sql.j2
@@ -13,4 +13,4 @@ WHERE
     AND {{ filters.geo(country, city) }}
 GROUP BY
     {{ groupbys.date('DATE(MajorChangeTimeStamp)', level) }}
-    PropertySubType
+    ,PropertySubType
