--- a/analytics/template/supply-demand/days-on-market.sql.j2
+++ b/analytics/template/supply-demand/days-on-market.sql.j2
@@ -3,7 +3,7 @@
 {%- import 'macro/filters.sql.j2' as filters %}
 
 SELECT
-    {{ dimensions.date('CloseDate', level) }}
+    {{ dimensions.date('CloseDate', level) }} AS date,
     AVG(DATE_DIFF(CloseDate, OnMarketDate, DAY) + 1) as days_on_market,
 FROM
     MLSGrid.Property
@@ -11,5 +11,5 @@ WHERE
     {{ filters.close_date(start, end) }}
     AND {{ filters.geo(country, city) }}
 GROUP BY
-    {{ groupbys.date('CloseDate', level) }}
+    {{ dimensions.date('CloseDate', level) }}
 
