feat: Fix groupby date dimension & test all templates

--- a/analytics/template/location/inventory-by-type.sql.j2
+++ b/analytics/template/location/inventory-by-type.sql.j2
@@ -11,7 +11,7 @@ WHERE
     {{ filters.market_date(start, end) }}
     AND {{ filters.geo(country, city) }}
 GROUP BY
-    {{ dimensions.date('OnMarketDate', level) }}
-    ,PropertySubType
+    date,
+    PropertySubType
 ORDER BY
     date
