--- a/analytics/template/supply-demand/days-on-market.sql.j2
+++ b/analytics/template/supply-demand/days-on-market.sql.j2
@@ -11,6 +11,6 @@ WHERE
     {{ filters.close_date(start, end) }}
     AND {{ filters.geo(country, city) }}
 GROUP BY
-    {{ dimensions.date('CloseDate', level) }}
+    date
 ORDER BY
     date
