--- a/analytics/template/location/major-metrics.sql.j2
+++ b/analytics/template/location/major-metrics.sql.j2
@@ -8,6 +8,7 @@ SELECT
             MLSGrid.Property
         WHERE
             {{ filters.close_date(start, end) }}
+            AND {{ filters.geo(country, city) }}
     ) AS total_sales_volume,
     (
         SELECT
@@ -16,6 +17,7 @@ SELECT
             MLSGrid.Property
         WHERE
             PropertyType = 'Residential'
+            AND {{ filters.geo(country, city) }}
             AND {{ filters.close_date(start, end) }}
     ) AS residential_sales_volume,
     (
@@ -24,8 +26,9 @@ SELECT
         FROM
             MLSGrid.Property
         WHERE
-            PropertyType = 'Condo'
+            LOWER(PropertySubType) LIKE '%condo%'
             AND {{ filters.close_date(start, end) }}
+            AND {{ filters.geo(country, city) }}
     ) AS condo_sales_volume,
     (
         SELECT
@@ -34,6 +37,7 @@ SELECT
             MLSGrid.Property
         WHERE
             {{ filters.close_date(start, end) }}
+            AND {{ filters.geo(country, city) }}
     ) AS avg_close_price,
     (
         SELECT
@@ -42,6 +46,7 @@ SELECT
             MLSGrid.Property
         WHERE
             {{ filters.close_date(start, end) }}
+            AND {{ filters.geo(country, city) }}
     ) AS avg_list_price,
     (
         SELECT
@@ -51,6 +56,7 @@ SELECT
         WHERE
             MlsStatus in ('Closed')
             AND {{ filters.close_date(start, end) }}
+            AND {{ filters.geo(country, city) }}
     ) AS avg_days_to_close,
     (
         SELECT
@@ -60,7 +66,7 @@ SELECT
         WHERE
             MlsStatus in ('Active')
             AND {{ filters.market_date(start, end) }}
-
+            AND {{ filters.geo(country, city) }}
     ) AS avg_days_to_market,
     (
         SELECT
@@ -70,4 +76,5 @@ SELECT
         WHERE
             MlsStatus in ('Active', 'Coming Soon / Hold')
             AND {{ filters.market_date(start, end) }}
+            AND {{ filters.geo(country, city) }}
     ) AS current_inventory,
