fix: Fix groupbys PropertySubType

--- a/analytics/template/macro/groupbys.sql.j2
+++ b/analytics/template/macro/groupbys.sql.j2
@@ -2,7 +2,7 @@
     {%- if by == 'bedrooms_total' -%}
     BedroomsTotal
     {%- elif by == 'type' -%}
-    PropertySubType,
+    PropertySubType
     {%- elif by == 'postal_code' -%}
     PostalCode
     {%- endif -%}
