fix: Fix sales-price-vs-list-price-ratio

--- a/analytics/template/location/sales-price-vs-list-price-ratio.sql.j2
+++ b/analytics/template/location/sales-price-vs-list-price-ratio.sql.j2
@@ -3,6 +3,8 @@
 
 SELECT
     date,
+    AVG(median_close_price) AS median_close_price,
+    AVG(median_list_price) AS median_list_price,
     AVG(SAFE_DIVIDE(median_close_price, median_list_price)) AS ratio
 FROM
     (
