feat: Use County instead of Country

--- a/analytics/template/dimension/country.sql.j2
+++ b/analytics/template/dimension/country.sql.j2
@@ -1,6 +1,6 @@
 SELECT
-    DISTINCT Country AS country
+    DISTINCT County AS county
 FROM
     MLSGrid.Property
 ORDER BY
-    country
+    county
