--- a/analytics/template/location/inventory.sql.j2
+++ b/analytics/template/location/inventory.sql.j2
@@ -10,7 +10,7 @@ FROM
 WHERE
     {{ filters.mls_status_active() }}
     AND {{ filters.market_date(start, end) }}
-    AND {{ filters.geo(country, city) }}
+    AND {{ filters.geo(county, city) }}
 {% if by %}
 GROUP BY
     {{ groupbys.breakdown(by) }}
