--- a/analytics/template/location/major-metrics-condo-sales-volume.sql.j2
+++ b/analytics/template/location/major-metrics-condo-sales-volume.sql.j2
@@ -6,9 +6,9 @@ SELECT
 FROM
     MLSGrid.Property
 WHERE
-    LOWER(PropertySubType) LIKE '%condo%'
+    PropertySubTypeGroup = 'Condominium'
     AND {{ filters.close_date(start, end) }}
-    AND {{ filters.geo(country, city) }}
+    AND {{ filters.geo(county, city) }}
 GROUP BY
     date
 ORDER BY
