--- a/analytics/template/location/major-metrics-current-inventory.sql.j2
+++ b/analytics/template/location/major-metrics-current-inventory.sql.j2
@@ -8,7 +8,7 @@ FROM
 WHERE
     MlsStatus in ('Active', 'Coming Soon / Hold')
     AND {{ filters.market_date(start, end) }}
-    AND {{ filters.geo(country, city) }}
+    AND {{ filters.geo(county, city) }}
 GROUP BY
     date
 ORDER BY
