--- a/analytics/template/location/major-metrics-residential-sales-volume.sql.j2
+++ b/analytics/template/location/major-metrics-residential-sales-volume.sql.j2
@@ -6,8 +6,8 @@ SELECT
 FROM
     MLSGrid.Property
 WHERE
-    PropertyType = 'Residential'
-    AND {{ filters.geo(country, city) }}
+    PropertySubTypeGroup = 'Single Family Residence'
+    AND {{ filters.geo(county, city) }}
     AND {{ filters.close_date(start, end) }}
 GROUP BY
     date
