--- a/analytics/template/macro/groupbys.sql.j2
+++ b/analytics/template/macro/groupbys.sql.j2
@@ -2,8 +2,8 @@
     {%- if by == 'bedrooms_total' -%}
     BedroomsTotal
     {%- elif by == 'type' -%}
-    PropertySubType
-    {%- elif by == 'postal_code' -%}
-    PostalCode
+    PropertySubTypeGroup
+    {%- elif by == 'zip_code' -%}
+    ZipCode
     {%- endif -%}
 {%- endmacro %}
