--- a/analytics/template/supply-demand/absorbtion-rate.sql.j2
+++ b/analytics/template/supply-demand/absorbtion-rate.sql.j2
@@ -12,7 +12,7 @@ WITH
             MLSGrid.Property
         WHERE
             {{ filters.close_date(start, end) }}
-            AND {{ filters.geo(country, city) }}
+            AND {{ filters.geo(county, city) }}
         GROUP BY
             date
     ),
@@ -25,7 +25,7 @@ WITH
         WHERE
             {{ filters.mls_status_active() }}
             AND {{ filters.market_date(start, end) }}
-            AND {{ filters.geo(country, city) }}
+            AND {{ filters.geo(county, city) }}
         GROUP BY
             date
     )
