--- a/analytics/template/supply-demand/days-on-market.sql.j2
+++ b/analytics/template/supply-demand/days-on-market.sql.j2
@@ -9,7 +9,7 @@ FROM
     MLSGrid.Property
 WHERE
     {{ filters.close_date(start, end) }}
-    AND {{ filters.geo(country, city) }}
+    AND {{ filters.geo(county, city) }}
 GROUP BY
     date
 ORDER BY
