--- a/analytics/template/supply-demand/new-listing-vs-under-contract.sql.j2
+++ b/analytics/template/supply-demand/new-listing-vs-under-contract.sql.j2
@@ -12,7 +12,7 @@ WITH
             MLSGrid.Property
         WHERE
             OnMarketDate BETWEEN '{{ start }}' AND '{{ end }}'
-            AND {{ filters.geo(country, city) }}
+            AND {{ filters.geo(county, city) }}
         GROUP BY
             date
     ),
@@ -27,7 +27,7 @@ WITH
                 OffMarketDate BETWEEN '{{ start }}' AND '{{ end }}'
                 OR ContingentDate BETWEEN '{{ start }}' AND '{{ end }}'
             )
-            AND {{ filters.geo(country, city) }}
+            AND {{ filters.geo(county, city) }}
         GROUP BY
             date
     )
