--- a/analytics/template/location/major-metrics-total-avg-sales-list-days-to-close.sql.j2
+++ b/analytics/template/location/major-metrics-total-avg-sales-list-days-to-close.sql.j2
@@ -10,7 +10,7 @@ FROM
     MLSGrid.Property
 WHERE
     {{ filters.close_date(start, end) }}
-    AND {{ filters.geo(country, city) }}
+    AND {{ filters.geo(county, city) }}
 GROUP BY
     date
 ORDER BY
