--- a/analytics/template/supply-demand/closed-sales-vs-under-contract.sql.j2
+++ b/analytics/template/supply-demand/closed-sales-vs-under-contract.sql.j2
@@ -14,7 +14,7 @@ WITH
             MLSGrid.Property
         WHERE
             {{ filters.close_date(start, end) }}
-            AND {{ filters.geo(country, city) }}
+            AND {{ filters.geo(county, city) }}
         GROUP BY
             date
             {%- if by -%}
@@ -33,7 +33,7 @@ WITH
                 OffMarketDate BETWEEN '{{ start }}' AND '{{ end }}'
                 OR ContingentDate BETWEEN '{{ start }}' AND '{{ end }}'
             )
-            AND {{ filters.geo(country, city) }}
+            AND {{ filters.geo(county, city) }}
         GROUP BY
             date
             {%- if by -%}
@@ -45,9 +45,9 @@ SELECT
     {%- if by == 'bedrooms_total' -%}
     master_dimension.bedrooms_total,
     {%- elif by == 'type' -%}
-    master_dimension.property_sub_type,
-    {%- elif by == 'postal_code' -%}
-    master_dimension.postal_code,
+    master_dimension.property_sub_type_group,
+    {%- elif by == 'zip_code' -%}
+    master_dimension.zip_code,
     {%- endif %}
     SUM(closed_sales.cnt) AS closed_sales,
     SUM(under_contract.cnt) AS under_contract
@@ -58,27 +58,27 @@ FROM
     {% if by == 'bedrooms_total' %}
     AND COALESCE(master_dimension.bedrooms_total, 101) = COALESCE(closed_sales.bedrooms_total, 101)
     {% elif by == 'type' %}
-    AND COALESCE(master_dimension.property_sub_type, 'ABC') = COALESCE(closed_sales.property_sub_type, 'ABC')
-    {% elif by == 'postal_code' %}
-    AND COALESCE(master_dimension.postal_code, 'ABC') = COALESCE(closed_sales.postal_code, 101)
+    AND COALESCE(master_dimension.property_sub_type_group, 'ABC') = COALESCE(closed_sales.property_sub_type_group, 'ABC')
+    {% elif by == 'zip_code' %}
+    AND COALESCE(master_dimension.zip_code, 'ABC') = COALESCE(closed_sales.zip_code, 101)
     {% endif %}
     LEFT JOIN under_contract
     ON master_dimension.day = under_contract.date
     {% if by == 'bedrooms_total' %}
     AND COALESCE(master_dimension.bedrooms_total, 101) = COALESCE(under_contract.bedrooms_total, 101)
     {% elif by == 'type' %}
-    AND COALESCE(master_dimension.property_sub_type, 'ABC') = COALESCE(under_contract.property_sub_type, 'ABC')
-    {% elif by == 'postal_code' %}
-    AND COALESCE(master_dimension.postal_code, 'ABC') = COALESCE(under_contract.postal_code, 101)
+    AND COALESCE(master_dimension.property_sub_type_group, 'ABC') = COALESCE(under_contract.property_sub_type_group, 'ABC')
+    {% elif by == 'zip_code' %}
+    AND COALESCE(master_dimension.zip_code, 'ABC') = COALESCE(under_contract.zip_code, 101)
     {% endif %}
 GROUP BY
     master_dimension.day
     {% if by == 'bedrooms_total' %}
     ,master_dimension.bedrooms_total
     {% elif by == 'type' %}
-    ,master_dimension.property_sub_type
-    {% elif by == 'postal_code' %}
-    ,master_dimension.postal_code
+    ,master_dimension.property_sub_type_group
+    {% elif by == 'zip_code' %}
+    ,master_dimension.zip_code
     {% endif %}
 HAVING
     closed_sales > 0
