--- a/analytics/template/macro/dimensions.sql.j2
+++ b/analytics/template/macro/dimensions.sql.j2
@@ -11,10 +11,20 @@
 
 {%- macro breakdown(by) -%}
     {%- if by == 'bedrooms_total' -%}
-    BedroomsTotal AS bedrooms_total,
+    BedroomsTotal AS bedrooms_total
     {%- elif by == 'type' -%}
-    PropertySubTypeGroup AS property_sub_type_group,
+    PropertySubTypeGroup AS property_sub_type_group
     {%- elif by == 'zip_code' -%}
-    ZipCode AS zip_code,
+    ZipCode AS zip_code
+    {%- endif %}
+{%- endmacro %}
+
+{%- macro breakdown_cte(by) -%}
+    {%- if by == 'bedrooms_total' -%}
+    bedrooms_total
+    {%- elif by == 'type' -%}
+    property_sub_type_group
+    {%- elif by == 'zip_code' -%}
+    zip_code
     {%- endif %}
 {%- endmacro %}
